# drone

./: CHANGES_2026-04-14.md  what_now.md
ArUco_ws/: readme.md
ArUco_ws/install/: local_setup.sh  setup.sh
ArUco_ws/install/aruco_detector_py/lib/aruco_detector_py/: aruco_detector_node
ArUco_ws/log/: OrbbecSDK.log.txt
ArUco_ws/src/aruco_detector_py/: package.xml  setup.cfg  setup.py
ArUco_ws/src/aruco_detector_py/aruco_detector_py/: aruco_detector_node.py
DroneFly/: README.md  user.txt
DroneFly/src/drone_pkg/: package.xml  setup.py
DroneFly/src/drone_pkg/drone_pkg/: Func.py  Task.py
DroneFly/src/drone_pkg/test/: 00_position_monitor.py  01_arming_drone.py  02_set_mode.py  03_takeoff.py  04_setpoint.py  05_auto_fly.py  temp.py
DroneWS/: CHANGES_2026-04-14.md  README.md  SETUP_ARDUPILOT.md  cartographer_vision_bridge.py  closeloopforward(1).py  drone_cartographer_control.py  log.txt  scripts.py  setpoint.py  takeoff(1).py
YoloDetect_ws/: readme.md
YoloDetect_ws/model/: MNNConvert  best.mnn  best.onnx  last.mnn  last.onnx
cartographer_ws/: README.md
cartographer_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cartographer_ws/src/tmini_cartographer_py/: setup.cfg  setup.py
cartographer_ws/src/tmini_cartographer_py/config/: tmini_cartographer.rviz
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ydlidar_ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ydlidar_ros2_ws/ydlidar_tmini_12m_taobao/: Tmini_launch.py  readme.txt
(+35 files in other folders)
